# ITMO

./: README.md  git.sh  lab3  pom.xml  бд лаб3.docx
client/src/: Client.java
client/src/data/: Coordinates.java  EyeColor.java  Location.java  Person.java  Validator.java
client/src/exceptions/: WrongArgumentException.java
client/src/network/: Client.java  Program.java  Response.java  User.java
database/: бд лаб4.docx
database/db1/: createtable.sql
database/db2/: requests.sql
db1/: workDB.sql  лаб1 дб.docx
fp/: .gitignore  .gitlab-ci.yml  .ocamlformat  dune-project
fp/lab0/: README.md
fp/lab1/: README.md  common.ml  dune  euler22.py  euler8.py  hello.ml  largestProduct.ml  largestProduct.mli  namesScore.ml  namesScore.mli  tests.ml
fp/lab2/: .gitignore  README.md
fp/lab2/src/: dict.ml  dict.mli  dune  ordered.mli
fp/lab2/test/: dune  test_lab2.ml
lab0/: README.md
lab1/: README.md  main.html
lab1/src/: Main.java
lab2/: pom.xml  readme  web.xml
lab4/back/: pom.xml
lab4/front/src/: App.js
lab5/: collection.json  script.txt
lab5/doc/: Main.html  allclasses-index.html  allpackages-index.html  element-list  help-doc.html  index.html  member-search-index.js  overview-summary.html  overview-tree.html  package-search-index.js  package-summary.html  package-tree.html  package-use.html  type-search-index.js
lab5/src/: Main.java
lab6.1/src/: Main.java
opi/: README.md  svn.sh
programming/lab1/: Lab1.java  new.html
programming/lab5/: collection1.json
sii/: README.md  lab1.ipynb
src/: Answer.java  Response.java
web/lab3/: read.me
(+314 files in other folders)
